aggregate all call activities and events in ProcessDetailDialog